--- a/resume.css
+++ b/resume.css
@@ -1,147 +1,151 @@
 body {
-    color: #000000;
-    background: #EEEEEE;
-    font: 1.1em "Times New Roman";
-    line-height: 1.2;
-    margin: 40px 0;
-    font-family: Trebuchet MS;
+  color: #000000;
+  background: #eeeeee;
+  font: 1em "Times New Roman";
+  line-height: 1.2;
+  margin: 40px 0;
+  font-family: Trebuchet MS;
 }
 #resume {
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 40px 60px;
-    background: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    box-shadow: 2px 2px 4px #AAAAAA;
-    -webkit-box-shadow: 2px 2px 4px #AAAAAA;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 40px 60px;
+  background: #ffffff;
+  border: 1px solid #cccccc;
+  box-shadow: 2px 2px 4px #aaaaaa;
+  -webkit-box-shadow: 2px 2px 4px #aaaaaa;
 }
 h1 {
-    text-align: center;
-    font-size: 200%;
-    margin: 16;
-    padding: 0;
-    font-family: Georgia, serif;
+  text-align: center;
+  font-size: 1.7em;
+  margin: 8;
+  padding: 0;
+  font-family: Georgia, serif;
 }
 h2 {
-    border-bottom: 1px solid #000000;
-    text-transform: uppercase;
-    font-size: 130%;
-    margin: 1em 0 0 0;
-    padding: 0;
-    font-family: Trebuchet MS;
+  border-bottom: 1px solid #000000;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  margin: 1em 0 0 0;
+  padding: 0;
+  font-family: Trebuchet MS;
 }
 h3 {
-    font-size: 100%;
-    margin: 0.8em 0 0.3em 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
+  font-size: 1em;
+  margin: 0.8em 0 0.3em 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  font-weight: normal;
 }
 h5 {
-    margin: 0;
-    margin-bottom: 12;
-    font-size: 14;
-    opacity: 0.8;
-    line-height: 0.6;
+  margin: 0;
+  margin-bottom: 0.8em;
+  font-size: 0.8em;
+  opacity: 0.8;
+  line-height: 0.6;
 }
 p {
-    margin: 0 0 0.5em 0;
-    padding: 0;
-    }
+  margin: 0 0 0.5em 0;
+  padding: 0;
+}
 ul {
-    padding: 0;
-    margin: 0 1.5em;
-    }
+  padding: 0;
+  margin: 0 1.5em;
+}
 /* ul immediately after h1 = contact list */
 h1 + ul {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    }
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 h1 + ul > li {
-    display: inline;
-    white-space: pre;
-    list-style-type: none;
+  display: inline;
+  white-space: pre;
+  list-style-type: none;
 }
 h1 + ul > li:after {
-    content: "  \2022  ";
+  content: "  |  ";
 }
 h1 + ul > li:last-child:after {
-    content: "";
+  content: "";
 }
 /* p immediately after contact list = summary */
 h1 + ul + p {
-    margin: 1em 0;
+  margin: 1em 0;
 }
 
 a {
-    color: #000000;
+  color: #000000;
 }
 a:link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 hr {
-    border-width: 0;
+  border-width: 0;
 }
 li {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 @media print {
-    body {
-        font-size: 10pt;
-        margin: 0;
-        padding: 0;
-        background: none;
-    }
-    #resume {
-        margin: 0;
-        padding: 0;
-        border: 0px;
-        background: none;
-        box-shadow: none;
-        -webkit-box-shadow: none;
-    }
-    h2 {
-        font-size: 14pt;
-        margin-bottom: 4pt;
-    }
-    h3 {
-        font-size: 11pt;
-    }
-    h5 {
-        font-size: 9pt;
-        opacity: 0.8;
-        line-height: 0.6;
-        margin-bottom: 8;
-    }
-    /* Make links black in PDF */
-    /* Move this outside the print block to apply this in HTML too */
-    a, a:link, a:visited, a:hover {
-        color: #000000;
-        text-decoration: none;
-    }
+  body {
+    font-size: 9.5pt;
+    margin: 0;
+    padding: 0;
+    background: none;
+  }
+  #resume {
+    margin: 0;
+    padding: 0;
+    border: 0px;
+    background: none;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+  }
+  h2 {
+    font-size: 13pt;
+    margin-bottom: 4pt;
+  }
+  h3 {
+    font-size: 10pt;
+  }
+  h5 {
+    font-size: 8pt;
+    opacity: 0.8;
+    line-height: 0.6;
+    margin-bottom: 8;
+  }
+  /* Make links black in PDF */
+  /* Move this outside the print block to apply this in HTML too */
+  a,
+  a:link,
+  a:visited,
+  a:hover {
+    color: #000000;
+    text-decoration: none;
+  }
 }
 @page {
-    /* Change margins and paper size of PDF */
-    /* https://developer.mozilla.org/en-US/docs/Web/CSS/@page */
-    size: letter;
-    margin: 0.5in 0.8in;
+  /* Change margins and paper size of PDF */
+  /* https://developer.mozilla.org/en-US/docs/Web/CSS/@page */
+  size: letter;
+  margin: 0.5in 0.8in;
 }
 @media screen and (max-width: 800px) {
-    body {
-        font-size: 16pt;
-        margin: 0;
-        padding: 0;
-        background: #FFFFFF !important;
-    }
-    #resume {
-        margin: 0;
-        padding: 1em;
-        border: 0px;
-        background: none;
-        box-shadow: none;
-        -webkit-box-shadow: none;
-    }
+  body {
+    font-size: 16pt;
+    margin: 0;
+    padding: 0;
+    background: #ffffff !important;
+  }
+  #resume {
+    margin: 0;
+    padding: 1em;
+    border: 0px;
+    background: none;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+  }
 }
