--- a/resume.css
+++ b/resume.css
@@ -1,7 +1,7 @@
 body {
   color: #000000;
   background: #eeeeee;
-  font: 1em "Times New Roman";
+  font: 12px "Times New Roman";
   line-height: 1.2;
   margin: 40px 0;
   font-family: Trebuchet MS;
@@ -31,7 +31,7 @@ h2 {
   font-family: Trebuchet MS;
 }
 h3 {
-  font-size: 1em;
+  font-size: 1.2em;
   margin: 0.8em 0 0.3em 0;
   padding: 0;
   display: flex;
@@ -109,7 +109,7 @@ li {
     margin-bottom: 4pt;
   }
   h3 {
-    font-size: 10pt;
+    font-size: 11pt;
   }
   h5 {
     font-size: 8pt;
