--- a/resume.css
+++ b/resume.css
@@ -65,7 +65,7 @@ h1 + ul > li {
   list-style-type: none;
 }
 h1 + ul > li:after {
-  content: "  |  ";
+  content: " ○";
 }
 h1 + ul > li:last-child:after {
   content: "";
